# Deterministic-metadata-governance-engine-for-CI-CD-enforcement

./: .gitignore  ANALYSIS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: chronos-sync.yml  compliance-sentinel.yml
ai/: insight_generator.py
api/: __init__.py  main.py
api/routes/: __init__.py  health.py  rollback.py  sentinel.py  timeline.py
chronos/: __init__.py  rollback.py  snapshot.py  timeline.py
config/: __init__.py  settings.py
contracts/examples/: example_contract.yaml
contracts/schema/: odcs_3_1_schema.yaml
docker/: .env.example  Dockerfile.api  Dockerfile.mcp  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: BlastRadius3D.tsx  HephaestusLayout.tsx
frontend/src/store/: HephaestusContext.tsx  useGovernanceStore.ts
ingestion/: __init__.py  lineage_loader.py  metadata_loader.py  schema_loader.py  volume_loader.py
mcp/: __init__.py  server.py
mcp/tools/: __init__.py  diff_tools.py  entity_tools.py  lineage_tools.py
sentinel/: __init__.py  main.py  report.py
sentinel/core/: __init__.py  blast_radius.py  diff_engine.py  fgs.py  semantic_drift.py
sentinel/skills/: __init__.py  base_skill.py  skills_loader.py
sync/: __init__.py  github_sink_listener.py  reverse_patch.py
tests/: __init__.py
tests/forge_drills/: __init__.py  drill_pii_detection.py  drill_schema_evolution.py
tests/unit/: __init__.py  test_blast_radius.py  test_diff_engine.py  test_fgs.py  test_ingestion_lineage.py  test_ingestion_metadata.py  test_semantic_drift.py
(+12 files in other folders)
